# opengl-experiments

./: CMakeLists.txt
include/: camera.h  controls.h  display.h  entity.h  model.h  renderer.h  shader_s.h
resources/shaders/: blue.shader  container.shader  entity.shader  green.shader
src/: camera.cpp  controls.cpp  display.cpp  display.h  entity.cpp  main.cpp  model.cpp  openglDebug.cpp  renderer.cpp  shader_s.cpp  shader_s.h  texture.cpp  texture.h
